# pronghorn

./: .gitattributes  .gitignore  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL  LICENSE  Makefile  Makefile.am  NOTICE  README.md  configure.ac
.github/workflows/: demo.yaml  docs.yaml
assets/pronghorn-ci-cd-pipeline-proposal/: pronghorn-ci-cd-pipeline-proposal.json
docs/: .gitignore  0.1-copying.texi  0.2-title-toc.texi  1.1-version-control-tools.texi  1.2-git-workflow.texi  build  metadata.pdfmark  pronghorn.tex  references.tex  report.texi  test.texi
docs/0-headers/: 0.1-copying.tex  0.2-title.tex  0.3-acknowledgements.tex  0.4-abstract.tex  0.5-toc.tex
docs/1-introduction/: 1.1-background.tex  1.2-literature.tex
docs/2-methodology/: 2-methodology.tex
docs/2-virtualization/: 2.1-hardware.tex  2.2-containerization.tex
docs/3-vcs/: 3.1-approach.tex  3.2-gitflow.tex  3.2.1-temporary.tex  3.2.2-development.tex  3.2.3-preproduction.tex  3.2.4-production.tex  3.3-gitops.tex
docs/4-infrastructure/: 4.1-development.tex  4.1-virtualization.tex  4.1.1-hardware.tex  4.1.2-containerization.tex  4.1.3-orchestration.tex  4.2-iac.tex  4.2-production.tex  4.3-cm.tex  4.4-cloud.tex
docs/5-ci/: 5.1-github.tex  5.2-stages.tex  5.2.1-build.tex  5.2.2-test.tex  5.2.3-analysis.tex  5.2.4-package.tex  5.2.5-storage.tex
docs/6-cd/: 6.1-sync.tex  6.1.1-images.tex  6.1.2-charts.tex  6.1.3-argo-templates.tex  6.2-secrets.tex
docs/7-conclusions/: 7-conclusions.tex
docs/7-environments/: 7.1-temporary.tex  7.2-development.tex  7.3-preproduction.tex  7.4-production.tex
(+56 files in other folders)
