# Initialization of Autoconf with specific project information
AC_INIT([pronghorn], [0.1], [wasymatieh01@gmail.com])
# Initialization of Automake
AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects silent-rules])
# Declaration of config output header
AC_CONFIG_HEADERS([config.h])

# Build configuration file for the Makefile
AC_CONFIG_FILES([Makefile])

# Output all configuration files built before
AC_OUTPUT
